--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/comp426-2022-spring/a04-EthanJacob02.git"
   },
   "author": "Ethan Jacob",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a04-EthanJacob02/issues"
   },
