--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/comp426-2022-spring/a04-EthanJacob02.git"
   },
-  "author": "Ethan Jacob",
+  "author": "ethanjacob02",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a04-EthanJacob02/issues"
